# farmer

./: .gitignore  README.md  backtest.py  discover.py  farm.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aggregators/: projectx.py
api/models/: __init__.py  models.py
backtest/: runner.py
calculations/: __init__.py  absorption_profile.py  candle_vwap.py  delta_profile.py  opening_range.py  vwap.py
config/: backtest.py  discover.py  farm.py  overrides.py
core/: engine.py  protocols.py  types.py
farm/: farmer.py
strategies/: __init__.py  absorption_bounce.py  ema_mean_reversion.py  ema_mean_reversion_confirmed.py  helpers.py  opening_range_breakout.py  signals.py  static_bounce.py  static_bounce_with_delta.py  static_level_bounce.py  static_level_bounce_confirmed_exit.py  vwap_cascade_reversal.py  vwap_diagnostic.py  vwap_mean_reversion.py  vwap_mean_reversion_ladder.py  vwap_mean_reversion_with_scaling.py
tickers/: __init__.py  csv.py  projectx.py  state.py
